orchestreeai-backend-server/infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestreeai-backend-service
  namespace: orchestreeai-backend
spec:
  type: ClusterIP
  selector:
    app: orchestreeai-backend
  ports:
    - port: 80
      targetPort: 8082
      name: http
